--- a/templates/selections/start.html
+++ b/templates/selections/start.html
@@ -8,6 +8,52 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" href="{% static 'selections/css/start.css' %}">
+    <style>
+        @font-face {
+            font-family: 'Pretendard-Regular';
+            src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+            font-weight: 400;
+            font-style: normal;
+        }
+        
+        body{
+            background-color: black;
+        }
+        
+        .title{
+            display: flex;
+            font-family: 'Pretendard-Regular';
+            padding-left: 2vw;
+            margin-top: 10vh;
+            height: 45vh;
+            font-size: 10vh;
+            color: white;
+        }
+        
+        .help{
+            display: flex;
+            font-family: 'Pretendard-Regular';
+            padding-left: 2vw;
+            margin-top: 5vh;
+            height: 15vh;
+            font-size: 2vh;
+            color: gray;
+        }
+        
+        .go{
+            width: 50vw;
+            margin-top: 2vh;
+            margin-left: 50%;
+            transform: translate(-25vw, 0);
+        }
+        
+        .go2{
+            width: 50vw;
+            margin-top: 1vh;
+            margin-left: 50%;
+            transform: translate(-25vw, 0);
+        }
+    </style>
 </head>
 <body>
     <div class="title">
